# freeimage

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD.orig  Whatsnew.txt  conanfile.py  conanfile.txt
Source/: CacheFile.h  FreeImage.h  FreeImageIO.h  Plugin.h  ToneMapping.h  Utilities.h  config.h.in
Source/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  ColorLookup.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion4.cpp  Conversion8.cpp  ConversionType.cpp  FreeImage.cpp  GetType.cpp  J2KHelper.cpp  J2KHelper.h  MNGHelper.cpp  MemoryIO.cpp  MultiPage.cpp  PSDParser.cpp  PixelAccess.cpp  Plugin.cpp  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJ2K.cpp  PluginJNG.cpp  PluginJP2.cpp  PluginJPEG.cpp  PluginJXR.cpp  PluginKOALA.cpp  PluginMNG.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPFM.cpp  (+18 more)
Source/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp
Source/Metadata/: Exif.cpp  FIRational.cpp  FIRational.h  FreeImageTag.cpp  FreeImageTag.h  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
tests/: CMakeLists.txt
tests/assets/: test01.hdr  test01.hdr.txt  test01.jp2.txt  test01.png.txt  test01.tif.txt
tests/dominique_s_test_suite/: CMakeLists.txt  main.cpp  run_dominique_tests.bat  run_dominique_tests.sh
tests/dominique_s_test_suite/tests_in/: test01.bmp.txt  test01.exr.txt  test01.gif.txt  test01.jp2  test01.tif  test02.bmp.txt  test02.jpg.txt  test02.tif.txt  test03.bmp.txt
tests/dominique_s_test_suite/tests_out/: test01.exr  test01.hdr  test01.jp2  test01.tif  test02.tif
tests/dominique_test/: CMakeLists.txt
tests/original/: CMakeLists.txt  MainTestSuite.cpp  TestSuite.h  exif.jxr  run_original_tests.bat  run_original_tests.sh  testChannels.cpp  testHeaderOnly.cpp  testImageType.cpp  testJPEG.cpp  testMPage.cpp  testMPageMemory.cpp  testMPageStream.cpp  testThumbnail.cpp  testWrappedBuffer.cpp
tests/test_read_write/: CMakeLists.txt  main.cpp
