project(dominic_test)

add_executable(${PROJECT_NAME} tests/dominique_s_test_suite/main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE freeimage)
add_dependencies(${PROJECT_NAME} freeimage)

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
file(COPY tests/dominique_s_test_suite/tests_in DESTINATION "${CMAKE_BINARY_DIR}")
file(COPY tests/dominique_s_test_suite/tests_out DESTINATION "${CMAKE_BINARY_DIR}")

add_test(NAME "Test_bmp" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.bmp" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.bmp")
add_test(NAME "Test_bmp2" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test02.bmp" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test02.bmp")
add_test(NAME "Test_bmp3" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test03.bmp" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test03.bmp")
add_test(NAME "Test_bmp4" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test04.bmp" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test04.bmp")
add_test(NAME "Test_gif" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.gif" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.gif")
add_test(NAME "Test_jpg" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.jpg" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.jpg")
add_test(NAME "Test_jpg2" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test02.jpg" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test02.jpg")
add_test(NAME "Test_png" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.png" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.png")
add_test(NAME "Test_tiff" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.tif" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.tif")
add_test(NAME "Test_tiff2" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test02.tif" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test02.tif")
add_test(NAME "Test_jp2" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.jp2" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.jp2")
add_test(NAME "Test_exr" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.exr" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.exr")
add_test(NAME "Test_hdr" COMMAND "dominic_test" -in "${CMAKE_CURRENT_BINARY_DIR}/tests_in/test01.hdr" -out "${CMAKE_CURRENT_BINARY_DIR}/tests_out/test01.hdr")
